force-app/main/default/objects/Opportunity/fields/RoHS_REACH_CONEG_Prop_65__c.field-meta.xml
<CustomField>
    <fullName>RoHS_REACH_CONEG_Prop_65__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>RoHS / REACH / CONEG / Prop 65 / Conflict Minerals</inlineHelpText>
    <label>RoHS / REACH / CONEG / Prop 65</label>
    <type>Checkbox</type>
</CustomField>