force-app/main/default/objects/Opportunity/fields/Shape_of_application_texture__c.field-meta.xml
<CustomField>
    <fullName>Shape_of_application_texture__c</fullName>
    <label>Shape of application texture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Curved</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>