force-app/main/default/objects/Opportunity/fields/Sheet_roll_to_sheet_or_roll_form__c.field-meta.xml
<CustomField>
    <fullName>Sheet_roll_to_sheet_or_roll_form__c</fullName>
    <inlineHelpText>Will it be converted in sheet, roll to sheet or roll form?</inlineHelpText>
    <label>Sheet, roll to sheet or roll form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sheet</fullName>
            </value>
            <value>
                <fullName>Roll to Sheet</fullName>
            </value>
            <value>
                <fullName>Roll Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>