force-app/main/default/objects/Opportunity/fields/Should_the_material_be_printable_or_not__c.field-meta.xml
<CustomField>
    <fullName>Should_the_material_be_printable_or_not__c</fullName>
    <label>Should the material be printable or not?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>