force-app/main/default/objects/Opportunity/fields/Standard_films__c.field-meta.xml
<CustomField>
    <fullName>Standard_films__c</fullName>
    <label>Standard films</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PET (polyester)</fullName>
            </value>
            <value>
                <fullName>PP (polypropylene)</fullName>
            </value>
            <value>
                <fullName>PE (polyethylene)</fullName>
            </value>
            <value>
                <fullName>PC (polycarbonate)</fullName>
            </value>
            <value>
                <fullName>PVC (vinyl)</fullName>
            </value>
            <value>
                <fullName>PI (polyimid)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>