force-app/main/default/objects/Opportunity/fields/Standard_Films_Text__c.field-meta.xml
<CustomField>
    <fullName>Standard_Films_Text__c</fullName>
    <label>Standard Films Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>