force-app/main/default/objects/Opportunity/fields/Supplier_MOQ_match_the_quoted_MOQ__c.field-meta.xml
<CustomField>
    <fullName>Supplier_MOQ_match_the_quoted_MOQ__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the supplier MOQ match the quoted MOQ? If not, how to solve this issue?</inlineHelpText>
    <label>Supplier MOQ match the quoted MOQ</label>
    <type>Checkbox</type>
</CustomField>