force-app/main/default/objects/Opportunity/fields/TASKRAY__trDealHandoffNotes__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDealHandoffNotes__c</fullName>
    <description>Key information about a deal that can be referenced during a customer&apos;s onboarding project.</description>
    <inlineHelpText>Use this field to store key information about a deal that can be referenced during a customer&apos;s onboarding project.</inlineHelpText>
    <label>Deal Handoff Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>