force-app/main/default/objects/Opportunity/fields/TASKRAY__trOnboardingKickoffCompleted__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trOnboardingKickoffCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if the TaskRay Onboarding Kickoff Flow has been completed for a given Opportunity.</description>
    <inlineHelpText>This field will be automatically updated if the TaskRay Onboarding Kickoff Flow has been completed for a given Opportunity.</inlineHelpText>
    <label>Onboarding Kickoff Completed</label>
    <type>Checkbox</type>
</CustomField>