force-app/main/default/objects/Opportunity/fields/Thickness__c.field-meta.xml
<CustomField>
    <fullName>Thickness__c</fullName>
    <label>Thickness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 mil - 25µ</fullName>
            </value>
            <value>
                <fullName>2 mil - 50µ</fullName>
            </value>
            <value>
                <fullName>3 mil - 75µ</fullName>
            </value>
            <value>
                <fullName>4 mil - 100µ</fullName>
            </value>
            <value>
                <fullName>5 mil - 125 µ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>