force-app/main/default/objects/Opportunity/fields/Thickness_Text__c.field-meta.xml
<CustomField>
    <fullName>Thickness_Text__c</fullName>
    <label>Thickness Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>