force-app/main/default/objects/Opportunity/fields/Timeforbusiness__c.field-meta.xml
<CustomField>
    <fullName>Timeforbusiness__c</fullName>
    <label>Timeforbusiness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>