force-app/main/default/objects/Opportunity/fields/UL__c.field-meta.xml
<CustomField>
    <fullName>UL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UL</label>
    <type>Checkbox</type>
</CustomField>