force-app/main/default/objects/Opportunity/fields/Unusual_finishing_packaging_requirements__c.field-meta.xml
<CustomField>
    <fullName>Unusual_finishing_packaging_requirements__c</fullName>
    <inlineHelpText>Are there any unusual finishing/packaging requirements?</inlineHelpText>
    <label>Unusual finishing/packaging requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>