force-app/main/default/objects/Opportunity/fields/UOM_Text__c.field-meta.xml
<CustomField>
    <fullName>UOM_Text__c</fullName>
    <label>UOM Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>