force-app/main/default/objects/Opportunity/fields/US_Mil_Spec__c.field-meta.xml
<CustomField>
    <fullName>US_Mil_Spec__c</fullName>
    <label>US Mil. Spec.#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>