force-app/main/default/objects/Opportunity/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <label>Vertical Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Durables</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Advertising</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Consumer Durables</fullName>
                <isActive>false</isActive>
                <label>Consumer Durables</label>
            </value>
            <value>
                <fullName>Intercompany</fullName>
                <isActive>false</isActive>
                <label>Intercompany</label>
            </value>
            <value>
                <fullName>Retail &amp; Advertisement</fullName>
                <isActive>false</isActive>
                <label>Retail &amp; Advertisement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>