force-app/main/default/objects/Opportunity/fields/Vertical_Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Sub_Market__c</fullName>
    <label>Vertical Sub Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical_Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad Specialty Promo</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Architectural</fullName>
            </value>
            <value>
                <fullName>Asset Visibility/Tracking</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Electronic Hardware</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Heavy Equipment/Machinery</fullName>
            </value>
            <value>
                <fullName>Household/Appliance</fullName>
            </value>
            <value>
                <fullName>Household &amp; Chemical</fullName>
            </value>
            <value>
                <fullName>Insulation</fullName>
            </value>
            <value>
                <fullName>Medical Device Labeling</fullName>
            </value>
            <value>
                <fullName>Medical Tapes</fullName>
            </value>
            <value>
                <fullName>Outdoor Power Equipment</fullName>
            </value>
            <value>
                <fullName>Out of Home Advertising</fullName>
            </value>
            <value>
                <fullName>Personal Care &amp; Cosmetics</fullName>
            </value>
            <value>
                <fullName>Personal Wellness</fullName>
            </value>
            <value>
                <fullName>Petrochemical Drum</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical_Labeling</fullName>
                <label>Pharmaceutical Labeling</label>
            </value>
            <value>
                <fullName>Portable Devices</fullName>
            </value>
            <value>
                <fullName>Recreation/Sporting</fullName>
            </value>
            <value>
                <fullName>Reflective Signage</fullName>
            </value>
            <value>
                <fullName>Safety Equipment</fullName>
            </value>
            <value>
                <fullName>Shelf Marking</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Wearables</fullName>
            </value>
            <value>
                <fullName>Wire Wrapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>