force-app/main/default/objects/Opportunity/fields/Was_a_QS_product_tried__c.field-meta.xml
<CustomField>
    <fullName>Was_a_QS_product_tried__c</fullName>
    <label>Was a QS product tried</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>