force-app/main/default/objects/Opportunity/fields/What_annual_amount_is_expected__c.field-meta.xml
<CustomField>
    <fullName>What_annual_amount_is_expected__c</fullName>
    <label>What annual amount is expected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 1.000 m² pa</fullName>
            </value>
            <value>
                <fullName>&lt; 5.000 m² pa</fullName>
            </value>
            <value>
                <fullName>&lt; 10.000 m² pa</fullName>
            </value>
            <value>
                <fullName>&lt; 25.000 m² pa</fullName>
            </value>
            <value>
                <fullName>&gt; 25.000 m² pa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>