force-app/main/default/objects/Opportunity/fields/What_are_the_customer_requirements__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_customer_requirements__c</fullName>
    <inlineHelpText>What does the customer expect from Flexcon. (Quality, lead time, etc.) Certs</inlineHelpText>
    <label>What are the customer requirements?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>