force-app/main/default/objects/Opportunity/fields/What_are_the_FLEXcon_requirements__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_FLEXcon_requirements__c</fullName>
    <inlineHelpText>What are the FLEXcon requirements?</inlineHelpText>
    <label>What are the FLEXcon requirements?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>