force-app/main/default/objects/Opportunity/fields/What_components_is_FLEXcon_supplying__c.field-meta.xml
<CustomField>
    <fullName>What_components_is_FLEXcon_supplying__c</fullName>
    <label>What components is FLEXcon supplying?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>