force-app/main/default/objects/Opportunity/fields/What_is_the_Application__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Application__c</fullName>
    <label>What is the Application?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>