force-app/main/default/objects/Opportunity/fields/What_is_the_general_application__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_general_application__c</fullName>
    <inlineHelpText>What is the general application?</inlineHelpText>
    <label>What is the general application?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>