force-app/main/default/objects/Opportunity/fields/What_is_the_price_target__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_price_target__c</fullName>
    <label>What is the price target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD 0.30 – 0.75 /MSI</fullName>
            </value>
            <value>
                <fullName>USD 0.75 – 1.50 /MSI</fullName>
            </value>
            <value>
                <fullName>USD 1.50 – 2.50 /MSI</fullName>
            </value>
            <value>
                <fullName>USD 2.50 + /MSI</fullName>
            </value>
            <value>
                <fullName>EUR &lt;1.00 / M2</fullName>
            </value>
            <value>
                <fullName>EUR 1.00 – 2.00 /M2</fullName>
            </value>
            <value>
                <fullName>EUR 2.00 – 4.00 /M2</fullName>
            </value>
            <value>
                <fullName>EUR 4.00 – 5.00 /M2</fullName>
            </value>
            <value>
                <fullName>EUR 5.00 + / M2</fullName>
            </value>
            <value>
                <fullName>EUR 1-2 / m²</fullName>
                <isActive>false</isActive>
                <label>EUR 1-2 / m²</label>
            </value>
            <value>
                <fullName>EUR 2-4 /m²</fullName>
                <isActive>false</isActive>
                <label>EUR 2-4 /m²</label>
            </value>
            <value>
                <fullName>EUR 5-6 /m²</fullName>
                <isActive>false</isActive>
                <label>EUR 5-6 /m²</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>