force-app/main/default/objects/Opportunity/fields/What_is_the_price_target_text__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_price_target_text__c</fullName>
    <inlineHelpText>What is the price target?</inlineHelpText>
    <label>What is the price target text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>