force-app/main/default/objects/Opportunity/fields/Why_quote_or_start_project__c.field-meta.xml
<CustomField>
    <fullName>Why_quote_or_start_project__c</fullName>
    <label>Why quote or start project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>project out to bid</fullName>
            </value>
            <value>
                <fullName>competitive issue</fullName>
            </value>
            <value>
                <fullName>performance issue</fullName>
            </value>
            <value>
                <fullName>delivery issue</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>Brochure FLEXcon</fullName>
                <isActive>false</isActive>
                <label>Brochure FLEXcon</label>
            </value>
            <value>
                <fullName>Mailshot FLEXcon</fullName>
                <isActive>false</isActive>
                <label>Mailshot FLEXcon</label>
            </value>
            <value>
                <fullName>New project / product</fullName>
                <isActive>false</isActive>
                <label>New project / product</label>
            </value>
            <value>
                <fullName>Price comparison</fullName>
                <isActive>false</isActive>
                <label>Price comparison</label>
            </value>
            <value>
                <fullName>Replacement of competitor material</fullName>
                <isActive>false</isActive>
                <label>Replacement of competitor material</label>
            </value>
            <value>
                <fullName>Second source</fullName>
                <isActive>false</isActive>
                <label>Second source</label>
            </value>
            <value>
                <fullName>Tweak existing product</fullName>
                <isActive>false</isActive>
                <label>Tweak existing product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>