force-app/main/default/objects/Opportunity/fields/Won_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Reason__c</fullName>
    <label>Won/Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Couldn&apos;t meet MOQ</fullName>
            </value>
            <value>
                <fullName>Customer hasn&apos;t responded after several attempts</fullName>
            </value>
            <value>
                <fullName>FLEXcon lacks Capability</fullName>
            </value>
            <value>
                <fullName>Found more economical product elsewhere</fullName>
            </value>
            <value>
                <fullName>Lead Time - Product Delivery</fullName>
            </value>
            <value>
                <fullName>Market Application/Solutions - FLEXcon</fullName>
            </value>
            <value>
                <fullName>No or insufficient pain found</fullName>
            </value>
            <value>
                <fullName>Price - Greater Value</fullName>
            </value>
            <value>
                <fullName>Pricing too High</fullName>
            </value>
            <value>
                <fullName>Product didn&apos;t meet customer specifications</fullName>
            </value>
            <value>
                <fullName>Project Canceled by Convertor or End User</fullName>
            </value>
            <value>
                <fullName>Project Canceled - Poor Project Response or Support</fullName>
            </value>
            <value>
                <fullName>Sample or trial failed</fullName>
            </value>
            <value>
                <fullName>Solved - Delivery</fullName>
            </value>
            <value>
                <fullName>Solved - Performance</fullName>
            </value>
            <value>
                <fullName>Solved - Quality</fullName>
            </value>
            <value>
                <fullName>Strategic Relationship</fullName>
            </value>
            <value>
                <fullName>Won - RFQ/RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>