force-app/main/default/objects/Opportunity/recordTypes/Business_as_Usual.recordType-meta.xml
<RecordType>
    <fullName>Business_as_Usual</fullName>
    <active>true</active>
    <businessProcess>Custom Sales Process</businessProcess>
    <label>Commercial Business</label>
</RecordType>