force-app/main/default/objects/Opportunity/recordTypes/Flexcon_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Flexcon_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Custom Sales Process</businessProcess>
    <label>FLEXcon Opportunity</label>
</RecordType>