force-app/main/default/objects/Opportunity/validationRules/Account_Primary_Market.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Primary_Market</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Account.PrimaryType__c) = &apos;&apos;</errorConditionFormula>
    <errorMessage>Primary Type on Account is Required</errorMessage>
</ValidationRule>