force-app/main/default/objects/Opportunity/validationRules/Won_Lost_Reason_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Won_Lost_Reason_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(StageName, &apos;Closed Won&apos;) ,
ISPICKVAL(StageName, &apos;Closed Lost&apos;)
),
ISPICKVAL(Won_Lost_Reason__c, &apos;&apos;),
DATEVALUE(CreatedDate) &gt;= DATEVALUE(&quot;2020-12-07&quot;)
)</errorConditionFormula>
    <errorMessage>Won/Lost Reason is mandatory to choose</errorMessage>
</ValidationRule>