force-app/main/default/objects/Opportunity/listViews/My_Open_Opp_s_Past_Estimated_Close_Date.listView-meta.xml
<ListView>
    <fullName>My_Open_Opp_s_Past_Estimated_Close_Date</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>of_Days_Until_Close__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.EXP_AMOUNT</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>New,Qualification,Proposal,Negotiation</value>
    </filters>
    <label>My Open Opp&apos;s Past Estimated Close Date</label>
</ListView>